Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -198,7 +198,7 @@
 
 <!-- Hero Section -->
 <section class="relative w-full overflow-hidden">
-  <img src="images/hero-flight2.jpg" alt="Free Legal Help Banner"
+  <img src="images/hero-exit.jpg" alt="Exit your timeshare roday!"
        class="w-full h-auto object-cover object-center" loading="eager" fetchpriority="high" />
 </section>
 
