--- a/public/index.html
+++ b/public/index.html
@@ -238,59 +238,11 @@
           <p class="text-sm sm:text-base mt-1">Enter your flight details to see if you’re entitled under EU261.</p>
         </div>
   
-        <!-- Calculator Form -->
-        <div class="p-6">
-          <form id="compensation-form" class="space-y-4">
-            <div>
-              <label for="departure" class="block font-semibold">Departure Airport</label>
-              <input list="airports" id="departure" placeholder="e.g. Amsterdam AMS" required
-                     class="w-full border border-gray-300 p-2 rounded" />
-            </div>
-  
-            <div>
-              <label for="arrival" class="block font-semibold">Arrival Airport</label>
-              <input list="airports" id="arrival" placeholder="e.g. Malaga AGP" required
-                     class="w-full border border-gray-300 p-2 rounded" />
-            </div>
-  
-            <div>
-              <label for="delay" class="block font-semibold">Delay Duration</label>
-              <select id="delay" required class="w-full border border-gray-300 p-2 rounded">
-                <option value="">Select Delay Duration</option>
-                <option value="2">Less than 3 hours</option>
-                <option value="3">3 to 4 hours</option>
-                <option value="4">More than 4 hours</option>
-              </select>
-            </div>
-  
-            <!-- Main Check Button -->
-            <button type="submit"
-                    class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded transition">
-              Check Compensation
-            </button>
-          </form>
-  
-          <!-- Compensation Result -->
-          <div id="compensation-result"
-               class="mt-6 text-center text-lg font-semibold text-green-700 hidden"></div>
-  
-          <!-- CTA Button Below -->
-          <a href="claim-form.html" id="claim-button"
-             class="block w-full text-center mt-4 bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-2 px-4 rounded transition hidden">
-            File Your Claim Free →
-          </a>
-        </div>
-  
-        <datalist id="airports"></datalist>
-      </div>
-  
-    </div>
-  </section>  
 
 <!-- Hero Banner Section with Happy Travelers -->
 <section class="w-full relative">
-    <img src="images/happy-travelers-hero.jpg" 
-         alt="Happy travelers hero banner"
+    <img src="images/hero-exit2.jpg" 
+         alt="Happy customers hero banner"
          class="w-full h-auto object-cover object-center max-h-[500px] sm:max-h-[600px]" 
          loading="eager" />
   </section>
