Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -313,8 +313,8 @@
   
       <!-- News Item 3 -->
       <div>
-        <img src="/images/logo-euconsumerwatch.png" alt="EU Consumer Watch" class="mx-auto h-10 mb-2">
-        <p class="text-sm text-gray-700">“EC261 letters in minutes – sent to the airline for you.”</p>
+        <img src="/images/quaerens-logo.png" alt="EU Consumer Watch" class="mx-auto h-10 mb-2">
+        <p class="text-sm text-gray-700">“Timeshare Exit Made Simple — Do It Yoursel Kit, No Lawyers, No Surprises!”</p>
       </div>
   
     </div>
