Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -206,28 +206,25 @@
 <section id="calculator" class="py-16 bg-white">
     <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
   
-      <!-- Left: Legal Info -->
-      <div class="bg-blue-50 rounded-xl p-6 shadow-md h-full" data-aos="fade-up">
-        <h2 class="text-xl font-bold mb-4 text-blue-800">Why You’re Entitled to Compensation</h2>
-        <p class="text-gray-700 mb-3">
-          Under <strong>EU Regulation 261/2004</strong>, you can claim up to <strong>€600</strong> if your flight was delayed,
-          cancelled, or overbooked — and the airline was at fault. This includes technical issues, crew shortages, and more.
-        </p>
-        <p class="text-gray-600">
-          If your flight arrived more than 3 hours late, and it wasn’t due to extraordinary circumstances (like extreme weather),
-          you may have a valid claim. Our experts handle the process — <strong>no win, no fee</strong>.
-        </p>
-        <hr class="my-4">
-        <h3 class="text-xl font-bold text-blue-800 mb-2">Why should you choose us?</h3>
-        <ul class="list-disc list-inside text-gray-700 space-y-2">
-          <li>We prepare and send your legal claim letter to the airline — at no cost.</li>
-          <li>No fees. No waiting lists. No hidden catches.</li>
-          <li>Save hours of your time — we’ve automated the process for you.</li>
-          <li>Just enter your flight details and relax.</li>
-          <li>Did I forget to mention that this service is FREE!</li>
-          <li>Support our work with an optional donation if you’re happy.</li>
-        </ul>
-      </div>
+<!-- Left: ExitMyTimeshares Do-It-Yourself Kit Promo -->
+<div class="bg-blue-50 rounded-xl p-6 shadow-md h-full" data-aos="fade-up">
+    <h2 class="text-xl font-bold mb-4 text-blue-800">Escape Your Timeshare — Without the Legal Fees</h2>
+    <p class="text-gray-700 mb-3">
+      Stuck in a timeshare you no longer want? Our <strong>Do-It-Yourself Exit Kit</strong> gives you everything you need to take back control — without paying thousands to lawyers or risky exit companies.
+    </p>
+    <p class="text-gray-600">
+      Created by legal experts, this kit includes the same professional letters and guidance we use for real claims — ready for you to download and use today.
+    </p>
+    <hr class="my-4">
+    <h3 class="text-xl font-bold text-blue-800 mb-2">What’s Inside the Kit?</h3>
+    <ul class="list-disc list-inside text-gray-700 space-y-2">
+      <li>Ready-to-use legal letters to cancel your timeshare.</li>
+      <li>Step-by-step instructions in plain English.</li>
+      <li>Covers contracts from United States, Spain, Portugal, and across the EU.</li>
+      <li>No pressure: you can upgrade later for expert help if needed.</li>
+      <li>One-time purchase. No hidden fees. Instant access.</li>
+    </ul>
+  </div>
   
       <!-- Right: Calculator -->
       <div class="bg-white rounded-xl shadow-md content-box h-full" data-aos="fade-up">
