Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -237,27 +237,23 @@
       </p>
     </div>
   
-    <!-- Eligibility Form -->
+    <!-- Form -->
     <div class="p-6">
       <form id="resort-check-form" class="space-y-4">
         <div>
           <label for="resort" class="block font-semibold">Resort Name</label>
-          <input list="resorts" id="resort" name="resort" placeholder="e.g. Anfi Del Mar, CLC World, Silverpoint..." required
+          <input list="resorts" id="resort" name="resort" placeholder="e.g. Anfi Del Mar, CLC World..." required
                  class="w-full border border-gray-300 p-2 rounded" />
         </div>
   
-        <!-- Main Check Button -->
         <button type="submit"
                 class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded transition">
           Check Eligibility
         </button>
       </form>
   
-      <!-- Result Message -->
-      <div id="resort-result"
-           class="mt-6 text-center text-lg font-semibold hidden"></div>
+      <div id="resort-result" class="mt-6 text-center text-lg font-semibold hidden"></div>
   
-      <!-- CTA Button -->
       <a href="download-kit.html" id="kit-button"
          class="block w-full text-center mt-4 bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-2 px-4 rounded transition hidden">
         Get the Do-It-Yourself Exit Kit →
