Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -316,8 +316,8 @@
   </div>  
   
   <!-- News Testimonials Section -->
-  <div class="mt-10 bg-white border border-gray-200 rounded-xl p-6 shadow-md">
-    <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 items-center text-center">
+  <div class="w-full max-w-7xl mx-auto px-4 py-8">
+    <div class="bg-white border rounded-xl p-6 shadow-md">
   
       <!-- News Item 1 -->
       <div>
@@ -341,11 +341,10 @@
   </div>  
 
 <!-- Hero Banner Section with Happy Travelers -->
-<section class="w-full relative">
-    <img src="images/hero-exit2.jpg" 
-         alt="Happy travelers hero banner"
-         class="w-full h-auto object-cover object-center max-h-[500px] sm:max-h-[600px]" 
-         loading="eager" />
+<section class="w-full">
+    <img src="images/hero-exit2.jpg"
+         alt="Happy travelers"
+         class="w-full h-auto object-cover object-center max-h-[600px]" loading="eager" />
   </section>
 
 <!-- Legal Explanation with Background -->
