Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -202,6 +202,31 @@
        class="w-full h-auto object-cover object-center" loading="eager" fetchpriority="high" />
 </section>
 
+  <!-- News Testimonials Section -->
+  <div class="w-full max-w-7xl mx-auto px-4 py-8">
+    <div class="bg-white border rounded-xl p-6 shadow-md">
+      <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 items-center text-center">
+  
+      <!-- News Item 1 -->
+      <div>
+        <img src="/images/logo-arda.png" alt="ARDA" class="mx-auto h-10 mb-2">
+        <p class="text-sm text-gray-700">“There’s no need to deal with exit companies, because there are safe ways to exit a timeshare.”</p>
+      </div>
+  
+      <!-- News Item 2 -->
+      <div>
+        <img src="/images/logo-foxnews.png" alt="Fox News" class="mx-auto h-10 mb-2">
+        <p class="text-sm text-gray-700">“Timeshares do not appreciate in value… selling may mean losing money.”</p>
+      </div>
+  
+      <!-- News Item 3 -->
+      <div>
+        <img src="/images/quaerens-logo.png" alt="EU Consumer Watch" class="mx-auto h-10 mb-2">
+        <p class="text-sm text-gray-700">“Timeshare Exit Made Simple — Do It Yoursel Kit, No Lawyers, No Surprises!”</p>
+      </div> 
+    </div>
+  </div>  
+
 <!-- Claim Calculator -->
 <section id="calculator" class="py-16 bg-white">
     <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
@@ -313,31 +338,6 @@
       <option value="Parkside Williamsburg Resort (Bluegreen)">
       <option value="Elian Hotel & Spa (Bluegreen)">
     </datalist>
-  </div>  
-  
-  <!-- News Testimonials Section -->
-  <div class="w-full max-w-7xl mx-auto px-4 py-8">
-    <div class="bg-white border rounded-xl p-6 shadow-md">
-  
-      <!-- News Item 1 -->
-      <div>
-        <img src="/images/logo-arda.png" alt="ARDA" class="mx-auto h-10 mb-2">
-        <p class="text-sm text-gray-700">“There’s no need to deal with exit companies, because there are safe ways to exit a timeshare.”</p>
-      </div>
-  
-      <!-- News Item 2 -->
-      <div>
-        <img src="/images/logo-foxnews.png" alt="Fox News" class="mx-auto h-10 mb-2">
-        <p class="text-sm text-gray-700">“Timeshares do not appreciate in value… selling may mean losing money.”</p>
-      </div>
-  
-      <!-- News Item 3 -->
-      <div>
-        <img src="/images/quaerens-logo.png" alt="EU Consumer Watch" class="mx-auto h-10 mb-2">
-        <p class="text-sm text-gray-700">“Timeshare Exit Made Simple — Do It Yoursel Kit, No Lawyers, No Surprises!”</p>
-      </div>
-  
-    </div>
   </div>  
 
 <!-- Hero Banner Section with Happy Travelers -->
