Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -202,150 +202,151 @@
        class="w-full h-auto object-cover object-center" loading="eager" fetchpriority="high" />
 </section>
 
-  <!-- News Testimonials Section -->
-  <div class="w-full max-w-7xl mx-auto px-4 py-8">
-    <div class="bg-white border rounded-xl p-6 shadow-md">
-      <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 items-center text-center">
-  
-      <!-- News Item 1 -->
-      <div>
-        <img src="/images/logo-arda.png" alt="ARDA" class="mx-auto h-10 mb-2">
-        <p class="text-sm text-gray-700">“There’s no need to deal with exit companies, because there are safe ways to exit a timeshare.”</p>
-      </div>
-  
-      <!-- News Item 2 -->
-      <div>
-        <img src="/images/logo-foxnews.png" alt="Fox News" class="mx-auto h-10 mb-2">
-        <p class="text-sm text-gray-700">“Timeshares do not appreciate in value… selling may mean losing money.”</p>
-      </div>
-  
-      <!-- News Item 3 -->
-      <div>
-        <img src="/images/quaerens-logo.png" alt="EU Consumer Watch" class="mx-auto h-10 mb-2">
-        <p class="text-sm text-gray-700">“Timeshare Exit Made Simple — Do It Yoursel Kit, No Lawyers, No Surprises!”</p>
-      </div> 
-    </div>
-  </div>  
-
 <!-- Claim Calculator -->
 <section id="calculator" class="py-16 bg-white">
     <div class="max-w-7xl mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
   
-<!-- Left: ExitMyTimeshares Do-It-Yourself Kit Promo -->
-<div class="bg-blue-50 rounded-xl p-6 shadow-md h-full" data-aos="fade-up">
-    <h2 class="text-xl font-bold mb-4 text-blue-800">Escape Your Timeshare — Without the Legal Fees</h2>
-    <p class="text-gray-700 mb-3">
-      Stuck in a timeshare you no longer want? Our <strong>Do-It-Yourself Exit Kit</strong> gives you everything you need to take back control — without paying thousands to lawyers or risky exit companies.
-    </p>
-    <p class="text-gray-600">
-      Created by legal experts, this kit includes the same professional letters and guidance we use for real claims — ready for you to download and use today.
-    </p>
-    <hr class="my-4">
-    <h3 class="text-xl font-bold text-blue-800 mb-2">What’s Inside the Kit?</h3>
-    <ul class="list-disc list-inside text-gray-700 space-y-2">
-      <li>Ready-to-use legal letters to cancel your timeshare.</li>
-      <li>Step-by-step instructions in plain English.</li>
-      <li>Covers contracts from United States, Spain, Portugal, and across the EU.</li>
-      <li>No pressure: you can upgrade later for expert help if needed.</li>
-      <li>One-time purchase. No hidden fees. Instant access.</li>
-    </ul>
-  </div>
+      <!-- Left: ExitMyTimeshares Do-It-Yourself Kit Promo -->
+      <div class="bg-blue-50 rounded-xl p-6 shadow-md h-full" data-aos="fade-up">
+        <h2 class="text-xl font-bold mb-4 text-blue-800">Escape Your Timeshare — Without the Legal Fees</h2>
+        <p class="text-gray-700 mb-3">
+          Stuck in a timeshare you no longer want? Our <strong>Do-It-Yourself Exit Kit</strong> gives you everything you need to take back control — without paying thousands to lawyers or risky exit companies.
+        </p>
+        <p class="text-gray-600">
+          Created by legal experts, this kit includes the same professional letters and guidance we use for real claims — ready for you to download and use today.
+        </p>
+        <hr class="my-4">
+        <h3 class="text-xl font-bold text-blue-800 mb-2">What’s Inside the Kit?</h3>
+        <ul class="list-disc list-inside text-gray-700 space-y-2">
+          <li>Ready-to-use legal letters to cancel your timeshare.</li>
+          <li>Step-by-step instructions in plain English.</li>
+          <li>Covers contracts from United States, Spain, Portugal, and across the EU.</li>
+          <li>No pressure: you can upgrade later for expert help if needed.</li>
+          <li>One-time purchase. No hidden fees. Instant access.</li>
+        </ul>
+      </div>
   
-<!-- Right: Resort Eligibility Checker -->
-<div class="bg-white rounded-xl shadow-md content-box h-full" data-aos="fade-up">
-
-    <!-- Yellow Banner Header -->
-    <div class="bg-yellow-300 text-blue-900 px-4 py-3 rounded-t-xl text-center border-b-2 border-yellow-500">
-      <h2 class="text-xl sm:text-2xl font-bold">🏖️ Check If Your Resort Is Eligible</h2>
-      <p class="text-sm sm:text-base mt-1">
-        Enter your resort name to see if you can use our Do-It-Yourself Timeshare Exit Kit.
-      </p>
-    </div>
+      <!-- Right: Resort Eligibility Checker -->
+      <div class="bg-white rounded-xl shadow-md content-box h-full" data-aos="fade-up">
   
-    <!-- Form -->
-    <div class="p-6">
-      <form id="resort-check-form" class="space-y-4">
-        <div>
-          <label for="resort" class="block font-semibold">Resort Name</label>
-          <input list="resorts" id="resort" name="resort" placeholder="e.g. Anfi Del Mar, CLC World..." required
-                 class="w-full border border-gray-300 p-2 rounded" />
+        <!-- Yellow Banner Header -->
+        <div class="bg-yellow-300 text-blue-900 px-4 py-3 rounded-t-xl text-center border-b-2 border-yellow-500">
+          <h2 class="text-xl sm:text-2xl font-bold">🏖️ Check If Your Resort Is Eligible</h2>
+          <p class="text-sm sm:text-base mt-1">
+            Enter your resort name to see if you can use our Do-It-Yourself Timeshare Exit Kit.
+          </p>
         </div>
   
-        <button type="submit"
-                class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded transition">
-          Check Eligibility
-        </button>
-      </form>
+        <!-- Form -->
+        <div class="p-6">
+          <form id="resort-check-form" class="space-y-4">
+            <div>
+              <label for="resort" class="block font-semibold">Resort Name</label>
+              <input list="resorts" id="resort" name="resort" placeholder="e.g. Anfi Del Mar, CLC World..." required
+                     class="w-full border border-gray-300 p-2 rounded" />
+            </div>
   
-      <div id="resort-result" class="mt-6 text-center text-lg font-semibold hidden"></div>
+            <button type="submit"
+                    class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded transition">
+              Check Eligibility
+            </button>
+          </form>
   
-      <a href="download-kit.html" id="kit-button"
-         class="block w-full text-center mt-4 bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-2 px-4 rounded transition hidden">
-        Get the Do-It-Yourself Exit Kit →
-      </a>
+          <div id="resort-result" class="mt-6 text-center text-lg font-semibold hidden"></div>
+  
+          <a href="download-kit.html" id="kit-button"
+             class="block w-full text-center mt-4 bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-2 px-4 rounded transition hidden">
+            Get the Do-It-Yourself Exit Kit →
+          </a>
+        </div>
+  
+        <!-- Resort List -->
+        <datalist id="resorts">
+          <option value="Anfi Del Mar">
+          <option value="Club La Costa (CLC)">
+          <option value="Los Amigos Beach Club">
+          <option value="Royal Oasis Club at Pueblo Quinta">
+          <option value="Sahara Sunset Club">
+          <option value="Santa Barbara Golf & Ocean Club">
+          <option value="Sunset Bay Club">
+          <option value="Sunset Harbour Club">
+          <option value="Sunset View Club">
+          <option value="Royal Tenerife Country Club">
+          <option value="Marriott Playa Andaluza">
+          <option value="Marriott Marbella Beach Resort">
+          <option value="Club Son Antem (Marriott)">
+          <option value="Club Cala Blanca (CLC)">
+          <option value="Club del Carmen (CLC)">
+          <option value="Jardines del Sol (CLC)">
+          <option value="Village d’Île‑de‑France (Marriott)">
+          <option value="Le Club Mougins (Diamond)">
+          <option value="Royal Regency Paris Vincennes (Diamond)">
+          <option value="Borgo alle Vigne (Hilton)">
+          <option value="Palazzo Catalani (Diamond)">
+          <option value="Vilar do Golf (Diamond)">
+          <option value="Alpine Club (Diamond)">
+          <option value="Craigendarroch (Hilton)">
+          <option value="Cromer Country Club (Diamond)">
+          <option value="Pine Lake Resort (Diamond)">
+          <option value="The Kenmore Club (Diamond)">
+          <option value="Thurnham Hall (Diamond)">
+          <option value="Woodford Bridge Country Club (Diamond)">
+          <option value="Wychnor Park Country Club (Diamond)">
+          <option value="Cibola Vista Resort & Spa (Bluegreen)">
+          <option value="Bell Rock Inn (Diamond)">
+          <option value="Kohls Ranch Lodge (Diamond)">
+          <option value="Los Abrigados Resort & Spa (Diamond)">
+          <option value="PVC at The Roundhouse (Diamond)">
+          <option value="Streamside at Vail (Bluegreen)">
+          <option value="The Historic Crags Lodge (Diamond)">
+          <option value="Lake Cumberland Resort (Bluegreen)">
+          <option value="Scenic Hills RV Resort (Bluegreen)">
+          <option value="Paradise Point (Bluegreen)">
+          <option value="Wilderness Club at Big Cedar (Bluegreen)">
+          <option value="Villas de Santa Fe (Diamond)">
+          <option value="Beachwoods Resort (Diamond)">
+          <option value="Sunrise Ridge Resort (Diamond)">
+          <option value="Laurel Crest (Bluegreen)">
+          <option value="Mountain Loft (Bluegreen)">
+          <option value="Shenandoah Crossing (Bluegreen)">
+          <option value="Patrick Henry Square (Bluegreen)">
+          <option value="Parkside Williamsburg Resort (Bluegreen)">
+          <option value="Elian Hotel & Spa (Bluegreen)">
+        </datalist>
+      </div>
     </div>
   
-    <!-- Resort List -->
-    <datalist id="resorts">
-      <option value="Anfi Del Mar">
-      <option value="Club La Costa (CLC)">
-      <option value="Los Amigos Beach Club">
-      <option value="Royal Oasis Club at Pueblo Quinta">
-      <option value="Sahara Sunset Club">
-      <option value="Santa Barbara Golf & Ocean Club">
-      <option value="Sunset Bay Club">
-      <option value="Sunset Harbour Club">
-      <option value="Sunset View Club">
-      <option value="Royal Tenerife Country Club">
-      <option value="Marriott Playa Andaluza">
-      <option value="Marriott Marbella Beach Resort">
-      <option value="Club Son Antem (Marriott)">
-      <option value="Club Cala Blanca (CLC)">
-      <option value="Club del Carmen (CLC)">
-      <option value="Jardines del Sol (CLC)">
-      <option value="Village d’Île‑de‑France (Marriott)">
-      <option value="Le Club Mougins (Diamond)">
-      <option value="Royal Regency Paris Vincennes (Diamond)">
-      <option value="Borgo alle Vigne (Hilton)">
-      <option value="Palazzo Catalani (Diamond)">
-      <option value="Vilar do Golf (Diamond)">
-      <option value="Alpine Club (Diamond)">
-      <option value="Craigendarroch (Hilton)">
-      <option value="Cromer Country Club (Diamond)">
-      <option value="Pine Lake Resort (Diamond)">
-      <option value="The Kenmore Club (Diamond)">
-      <option value="Thurnham Hall (Diamond)">
-      <option value="Woodford Bridge Country Club (Diamond)">
-      <option value="Wychnor Park Country Club (Diamond)">
-      <option value="Cibola Vista Resort & Spa (Bluegreen)">
-      <option value="Bell Rock Inn (Diamond)">
-      <option value="Kohls Ranch Lodge (Diamond)">
-      <option value="Los Abrigados Resort & Spa (Diamond)">
-      <option value="PVC at The Roundhouse (Diamond)">
-      <option value="Streamside at Vail (Bluegreen)">
-      <option value="The Historic Crags Lodge (Diamond)">
-      <option value="Lake Cumberland Resort (Bluegreen)">
-      <option value="Scenic Hills RV Resort (Bluegreen)">
-      <option value="Paradise Point (Bluegreen)">
-      <option value="Wilderness Club at Big Cedar (Bluegreen)">
-      <option value="Villas de Santa Fe (Diamond)">
-      <option value="Beachwoods Resort (Diamond)">
-      <option value="Sunrise Ridge Resort (Diamond)">
-      <option value="Laurel Crest (Bluegreen)">
-      <option value="Mountain Loft (Bluegreen)">
-      <option value="Shenandoah Crossing (Bluegreen)">
-      <option value="Patrick Henry Square (Bluegreen)">
-      <option value="Parkside Williamsburg Resort (Bluegreen)">
-      <option value="Elian Hotel & Spa (Bluegreen)">
-    </datalist>
-  </div>  
-
-<!-- Hero Banner Section with Happy Travelers -->
-<section class="w-full">
-    <img src="images/hero-exit2.jpg"
-         alt="Happy travelers"
-         class="w-full h-auto object-cover object-center max-h-[600px]" loading="eager" />
-  </section>
+    <!-- News Testimonials Section -->
+    <div class="w-full max-w-7xl mx-auto px-4 py-8">
+      <div class="bg-white border rounded-xl p-6 shadow-md">
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 text-center">
+          <!-- News Item 1 -->
+          <div>
+            <img src="/images/logo-arda.png" alt="ARDA" class="mx-auto h-10 mb-2">
+            <p class="text-sm text-gray-700">“There’s no need to deal with exit companies, because there are safe ways to exit a timeshare.”</p>
+          </div>
+          <!-- News Item 2 -->
+          <div>
+            <img src="/images/logo-foxnews.png" alt="Fox News" class="mx-auto h-10 mb-2">
+            <p class="text-sm text-gray-700">“Timeshares do not appreciate in value… selling may mean losing money.”</p>
+          </div>
+          <!-- News Item 3 -->
+          <div>
+            <img src="/images/quaerens-logo.png" alt="EU Consumer Watch" class="mx-auto h-10 mb-2">
+            <p class="text-sm text-gray-700">“Timeshare Exit Made Simple — Do It Yourself Kit, No Lawyers, No Surprises!”</p>
+          </div> 
+        </div>
+      </div>
+    </div>
+  
+    <!-- Hero Banner Section with Happy Travelers -->
+    <section class="w-full mt-8">
+      <img src="images/hero-exit2.jpg"
+           alt="Happy timeshare exits"
+           class="w-full h-auto object-cover object-center max-h-[600px]"
+           loading="eager" />
+    </section>
+  </section>  
 
 <!-- Legal Explanation with Background -->
 <section class="py-16 bg-cover bg-center bg-no-repeat" style="background-image: url('images/airport-background-night.jpg');">
