--- a/public/index.html
+++ b/public/index.html
@@ -352,41 +352,42 @@
 <section class="py-16 bg-cover bg-center bg-no-repeat" style="background-image: url('images/airport-background-night.jpg');">
     <div class="max-w-6xl mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-6">
   
-      <!-- Box 1 -->
-      <div class="bg-white bg-opacity-90 backdrop-blur-sm rounded-xl shadow-xl p-6 border border-red-300 transition-transform duration-300 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-red-700 mb-4 text-center">USE A LAWYER</h3>
-        <ul class="text-gray-800 text-sm space-y-3">
-          <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Higher Fees (£50–£500 + hearing costs)</span></li>
-          <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Risk of losing money</span></li>
-          <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Time-consuming & complex</span></li>
-          <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Uncertain outcome</span></li>
-        </ul>
-      </div>
+<!-- Box 1: Why Not Use a Lawyer -->
+<div class="bg-white bg-opacity-90 backdrop-blur-sm rounded-xl shadow-xl p-6 border border-red-300 transition-transform duration-300 hover:-translate-y-1">
+    <h3 class="text-lg font-bold text-red-700 mb-4 text-center">USING A LAWYER</h3>
+    <ul class="text-gray-800 text-sm space-y-3">
+      <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Legal fees often exceed £2,000 or more</span></li>
+      <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Complex legal process with no guaranteed result</span></li>
+      <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Delays of 6–18 months are common</span></li>
+      <li class="flex items-start gap-2"><span class="text-red-500">✖</span><span>Many firms offer no refund if they fail</span></li>
+    </ul>
+  </div>  
   
-      <!-- Box 2 (highlighted) -->
-      <div class="bg-white bg-opacity-95 backdrop-blur-sm rounded-xl shadow-xl p-6 border-4 border-blue-600 transition-transform duration-300 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-blue-700 mb-4 text-center">USE OUR FREE SERVICE</h3>
-        <ul class="text-gray-800 text-sm space-y-3">
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>100% free, no catch</span></li>
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Instant downloadable letter</span></li>
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Email sent for you (optional)</span></li>
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>No waiting list — instant access</span></li>
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Thousands helped already</span></li>
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Optional donation if satisfied</span></li>
-        </ul>
-      </div>
+<!-- Box 2: Buy Our Do-It-Yourself Kit (Recommended) -->
+<div class="bg-white bg-opacity-95 backdrop-blur-sm rounded-xl shadow-xl p-6 border-4 border-blue-600 transition-transform duration-300 hover:-translate-y-1">
+    <h3 class="text-lg font-bold text-blue-700 mb-4 text-center">BUY OUR DO-IT-YOURSELF KIT</h3>
+    <ul class="text-gray-800 text-sm space-y-3">
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Legally approved cancellation letters</span></li>
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Step-by-step instructions in plain English</span></li>
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Instant digital download — no delays</span></li>
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Works for eligible resorts in the US, Spain & EU</span></li>
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Optional expert help if needed</span></li>
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Used successfully by thousands of owners</span></li>
+    </ul>
+  </div>
   
-      <!-- Box 3 -->
-      <div class="bg-white bg-opacity-90 backdrop-blur-sm rounded-xl shadow-xl p-6 border border-green-300 transition-transform duration-300 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-blue-700 mb-4 text-center">LET QUAERENS HANDLE IT</h3>
-        <ul class="text-gray-800 text-sm space-y-3">
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>We handle the full process</span></li>
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>No delays — we act immediately</span></li>
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Letter sent + follow-up with airline</span></li>
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Zero fees — no commission</span></li>
-          <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Donate if you’re happy — optional</span></li>
-        </ul>
-      </div>
+<!-- Box 3: We Request Full-Service Help -->
+<div class="bg-white bg-opacity-90 backdrop-blur-sm rounded-xl shadow-xl p-6 border border-green-300 transition-transform duration-300 hover:-translate-y-1">
+    <h3 class="text-lg font-bold text-blue-700 mb-4 text-center">WE REQUEST FULL-SERVICE HELP</h3>
+    <ul class="text-gray-800 text-sm space-y-3">
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>We request cancellation on your behalf</span></li>
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>No need to draft letters — we do it all</span></li>
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>We deal directly with the resort</span></li>
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Updates provided every step of the way</span></li>
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>No win, no fee — only pay if successful</span></li>
+      <li class="flex items-start gap-2"><span class="text-green-600">✔</span><span>Ideal for complex or high-value cases</span></li>
+    </ul>
+  </div>  
   
     </div>
   </section>  
