Your update message here

--- a/public/index.html
+++ b/public/index.html
@@ -392,10 +392,15 @@
     </div>
   </section>  
 
-  <div class="text-center">
-    <a href="/claim-form.html"
-       class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300 text-center">
-      Click here to start your free claim!
+  <div class="text-center space-y-4">
+    <a href="/download-kit.html"
+       class="inline-block bg-yellow-400 hover:bg-yellow-500 text-blue-900 font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
+      Buy your Do-It-Yourself Kit today for only €169
+    </a>
+  
+    <a href="/full-service.html"
+       class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-xl shadow-md transition duration-300">
+      Let ExitMyTimeshares.com do all the work
     </a>
   </div>
     
