--- a/public/index.html
+++ b/public/index.html
@@ -406,48 +406,24 @@
     
       <section class="bg-white pt-6 px-4 sm:px-6 lg:px-8">
 
-<!-- BOX 1: LAWS AND REGULATIONS -->
+<!-- BOX 1: KNOW YOUR RIGHTS -->
 <div class="max-w-3xl mx-auto px-4">
-  <div class="w-full bg-white rounded-xl shadow-md p-4 sm:p-6 border border-gray-200 mt-6" data-aos="fade-up" data-aos-delay="200">
-    <h3 class="text-lg sm:text-xl font-bold text-blue-700 mb-4">LAWS AND REGULATIONS</h3>
-    <p class="text-gray-700 text-sm sm:text-base mb-4">
-      The amount of compensation you are entitled to depends on distance and delay time, fixed by the EU and the same for all airlines.
-    </p>
-    <div class="overflow-x-auto">
-      <table class="min-w-full text-sm border border-gray-300 text-left text-gray-800">
-        <thead class="bg-gray-100 sticky top-0 z-10">
-          <tr>
-            <th class="px-3 py-2 border">Flight Distance</th>
-            <th class="px-3 py-2 border">Delay</th>
-            <th class="px-3 py-2 border">Compensation</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="px-3 py-2 border">&lt; 1,500 km</td>
-            <td class="px-3 py-2 border">&gt; 3 Hours</td>
-            <td class="px-3 py-2 border">€250</td>
-          </tr>
-          <tr>
-            <td class="px-3 py-2 border">1,500 – 3,500 km</td>
-            <td class="px-3 py-2 border">&gt; 3 Hours</td>
-            <td class="px-3 py-2 border">€400</td>
-          </tr>
-          <tr>
-            <td class="px-3 py-2 border">&gt; 3,500 km</td>
-            <td class="px-3 py-2 border">3–4 Hours</td>
-            <td class="px-3 py-2 border">€300</td>
-          </tr>
-          <tr>
-            <td class="px-3 py-2 border">&gt; 3,500 km</td>
-            <td class="px-3 py-2 border">&gt; 4 Hours</td>
-            <td class="px-3 py-2 border">€600</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="w-full bg-white rounded-xl shadow-md p-4 sm:p-6 border border-gray-200 mt-6" data-aos="fade-up" data-aos-delay="200">
+      <h3 class="text-lg sm:text-xl font-bold text-blue-700 mb-4">KNOW YOUR RIGHTS</h3>
+      <p class="text-gray-700 text-sm sm:text-base mb-4">
+        Many timeshare owners have the legal right to cancel their contract — especially in the EU and parts of the US. Even if the cooling-off period has passed, you may still be able to exit based on unfair terms, lack of transparency, or misrepresentation.
+      </p>
+      <ul class="list-disc list-inside text-gray-800 text-sm sm:text-base space-y-2">
+        <li><strong>EU Timeshare Directive 2008/122/EC:</strong> Grants cancellation rights for lifetime contracts, lack of clear info, or pressure tactics.</li>
+        <li><strong>Spanish Supreme Court rulings:</strong> Declared many contracts void if signed without proper legal compliance.</li>
+        <li><strong>UK & USA:</strong> Varies by state — but many resorts accept cancellation letters or voluntary surrenders if done properly.</li>
+        <li>You are not required to use an expensive lawyer or exit company — a properly written letter is often enough.</li>
+      </ul>
+      <p class="mt-4 text-sm text-gray-600 italic">
+        Our Do-It-Yourself Kit includes all legal wording and templates used in real successful exits — reviewed and updated regularly.
+      </p>
     </div>
-  </div>
-</div>
+  </div>  
 
 <!-- BOX 2: YOUR RIGHTS UNDER EC 261 -->
 <div class="max-w-3xl mx-auto px-4">
