--- a/public/index.html
+++ b/public/index.html
@@ -425,135 +425,130 @@
     </div>
   </div>  
 
-<!-- BOX 2: YOUR RIGHTS UNDER EC 261 -->
+<!-- BOX 2: WHAT’S IN THE DO-IT-YOURSELF KIT -->
 <div class="max-w-3xl mx-auto px-4">
-  <div x-data="{ open: true }" class="w-full bg-white rounded-xl shadow-md p-4 sm:p-6 border border-gray-200 mt-6" data-aos="fade-up" data-aos-delay="300">
-    <button
-      @click="open = !open"
-      class="w-full text-left text-lg sm:text-xl font-bold text-blue-700 flex items-center justify-between focus:outline-none"
-    >
-      <span>YOUR RIGHTS UNDER EC 261</span>
-      <svg xmlns="http://www.w3.org/2000/svg" :class="open ? 'rotate-180' : ''" class="h-5 w-5 text-blue-700 transition-transform duration-300" viewBox="0 0 20 20" fill="currentColor">
-        <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.08 1.04l-4.25 4.25a.75.75 0 01-1.08 0L5.25 8.27a.75.75 0 01-.02-1.06z" clip-rule="evenodd" />
-      </svg>
-    </button>
+    <div x-data="{ open: true }" class="w-full bg-white rounded-xl shadow-md p-4 sm:p-6 border border-gray-200 mt-6" data-aos="fade-up" data-aos-delay="300">
+      <button
+        @click="open = !open"
+        class="w-full text-left text-lg sm:text-xl font-bold text-blue-700 flex items-center justify-between focus:outline-none"
+      >
+        <span>WHAT’S IN THE DO-IT-YOURSELF KIT?</span>
+        <svg xmlns="http://www.w3.org/2000/svg" :class="open ? 'rotate-180' : ''" class="h-5 w-5 text-blue-700 transition-transform duration-300" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 10.94l3.71-3.71a.75.75 0 111.08 1.04l-4.25 4.25a.75.75 0 01-1.08 0L5.25 8.27a.75.75 0 01-.02-1.06z" clip-rule="evenodd" />
+        </svg>
+      </button>
+  
+      <div x-show="open" x-transition class="mt-4 space-y-3 text-gray-700 text-sm sm:text-base">
+        <div class="flex items-start gap-2">
+          <span class="text-green-600 mt-1">✔</span>
+          <p>Pre-drafted legal letters to cancel your timeshare — used by real lawyers.</p>
+        </div>
+        <div class="flex items-start gap-2">
+          <span class="text-green-600 mt-1">✔</span>
+          <p>Step-by-step instructions in plain English — easy to follow, even for beginners.</p>
+        </div>
+        <div class="flex items-start gap-2">
+          <span class="text-green-600 mt-1">✔</span>
+          <p>Covers contracts in the EU, UK, USA, and beyond — including Spain, Portugal, and Florida.</p>
+        </div>
+        <div class="flex items-start gap-2">
+          <span class="text-green-600 mt-1">✔</span>
+          <p>Templates for both voluntary exit requests and legal revocation notices.</p>
+        </div>
+        <div class="flex items-start gap-2">
+          <span class="text-green-600 mt-1">✔</span>
+          <p>Optional bonus: sample reply letters if your resort tries to resist your exit.</p>
+        </div>
+        <div class="flex items-start gap-2">
+          <span class="text-green-600 mt-1">✔</span>
+          <p>No subscription. No hidden fees. One-time purchase, instant download.</p>
+        </div>
+      </div>
+    </div>
+  </div>  
 
-    <div x-show="open" x-transition class="mt-4 space-y-2 text-gray-700 text-sm sm:text-base">
-      <div class="flex items-start gap-2">
-        <span class="text-green-600 mt-1">✔</span>
-        <p>If your flight is delayed more than 3 hours, you may claim compensation of €250 to €600.</p>
-      </div>
-      <div class="flex items-start gap-2">
-        <span class="text-green-600 mt-1">✔</span>
-        <p>Cancelled flights, denied boarding, and missed connections are also covered.</p>
-      </div>
-      <div class="flex items-start gap-2">
-        <span class="text-green-600 mt-1">✔</span>
-        <p>The airline must be responsible (e.g., technical fault or crew issue).</p>
-      </div>
-      <div class="flex items-start gap-2">
-        <span class="text-green-600 mt-1">✔</span>
-        <p>You can claim for flights up to 3 years ago depending on your country.</p>
-      </div>
-      <div class="flex items-start gap-2">
-        <span class="text-green-600 mt-1">✔</span>
-        <button onclick="document.getElementById('faqModal').classList.remove('hidden')" class="text-blue-600 underline">
-          Full summary – Frequently Asked Questions (FAQ)
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-   
+<!-- Testimonials -->
+<section class="relative py-16" style="background-image: url('images/airport-soft-bg.jpg'); background-size: cover; background-position: center;">
+    <div class="bg-white bg-opacity-90 py-12">
+      <div class="max-w-6xl mx-auto px-4">
+        <h2 class="text-2xl font-bold text-center mb-10">What Our Clients Say</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+          
+          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
+            <p class="italic">“I exited my timeshare in just 3 weeks using their kit. Amazing.”</p>
+            <p class="font-semibold mt-4">– James B.</p>
+          </div>
   
-  <!-- FAQ Modal -->
-  <div id="faqModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center hidden">
-    <div class="bg-white max-w-3xl max-h-[90vh] overflow-y-auto p-6 rounded-xl shadow-lg relative">
-      <button onclick="document.getElementById('faqModal').classList.add('hidden')" class="absolute top-2 right-2 text-xl font-bold">&times;</button>
-      <h3 class="text-xl font-semibold mb-4">Flight Delay & Cancellation Compensation – FAQ</h3>
-      <div class="space-y-4 text-sm leading-relaxed">
-        <p><strong>What is EC Regulation 261/2004?</strong><br>
-        A European Union law that entitles airline passengers to compensation for long delays, cancellations, and denied boarding.</p>
+          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
+            <p class="italic">“No pressure, no lawyers. Just downloaded the documents and sent them.”</p>
+            <p class="font-semibold mt-4">– Anna K.</p>
+          </div>
   
-        <p><strong>Who is eligible for compensation?</strong><br>
-        Passengers delayed 3+ hours, cancelled within 14 days, or denied boarding due to the airline’s fault.</p>
+          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
+            <p class="italic">“Saved over €3,000 by doing it myself instead of hiring a firm.”</p>
+            <p class="font-semibold mt-4">– Willem J.</p>
+          </div>
   
-        <p><strong>How far back can I claim?</strong><br>
-        Up to 6 years in the UK, 3 years in most EU countries.</p>
+          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
+            <p class="italic">“Clear steps, legally written letters — and they worked first try.”</p>
+            <p class="font-semibold mt-4">– Sophie M.</p>
+          </div>
   
-        <p><strong>What are the compensation amounts?</strong><br>
-        - €250 for flights under 1,500 km<br>
-        - €400 for 1,500–3,500 km<br>
-        - €600 for over 3,500 km (4+ hours delay)</p>
+          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
+            <p class="italic">“I was skeptical, but this is legit. No hidden fees, just good help.”</p>
+            <p class="font-semibold mt-4">– David T.</p>
+          </div>
   
-        <p><strong>Can I claim for a short flight (e.g. 100 miles)?</strong><br>
-        Yes, if arrival delay is 3+ hours and it’s the airline’s fault, you may still claim €250.</p>
+          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
+            <p class="italic">“Tried 3 companies before. This kit is what finally worked.”</p>
+            <p class="font-semibold mt-4">– Eleni S.</p>
+          </div>
   
-        <p><strong>What counts as 'extraordinary circumstances'?</strong><br>
-        Bad weather, strikes, air traffic control issues — but technical faults and crew issues usually qualify.</p>
+          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
+            <p class="italic">“So simple I could do it myself. No need to talk to anyone.”</p>
+            <p class="font-semibold mt-4">– Mike R.</p>
+          </div>
   
-        <p><strong>Do non-EU airlines count?</strong><br>
-        Yes, if departing from the EU/UK or arriving on an EU/UK airline.</p>
+          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
+            <p class="italic">“Highly recommend this to anyone stuck in a timeshare mess.”</p>
+            <p class="font-semibold mt-4">– Fatima D.</p>
+          </div>
   
-        <p><strong>Who pays the compensation?</strong><br>
-        The airline – not the travel agent or booking site.</p>
+          <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
+            <p class="italic">“Took me 30 minutes total. I emailed the letter, got confirmation a week later.”</p>
+            <p class="font-semibold mt-4">– Thomas V.</p>
+          </div>
   
-        <p><strong>What if I got a refund or voucher?</strong><br>
-        You can still claim compensation in addition to other remedies.</p>
-  
-        <p><strong>Will I be notified if the claim is accepted?</strong><br>
-        If you use Quaerens Ltd and provide a signed LoA, the airline will usually notify us directly.</p>
-  
-        <p><strong>How much does Quaerens charge?</strong><br>
-        25% of recovered compensation, including VAT – no-win, no-fee.</p>
-  
-        <p><strong>How long does it take?</strong><br>
-        2–4 weeks for a reply, up to 6–12 weeks if escalated.</p>
-      </div>
-    </div>
-  </div>
-  
-  </section>
-
-  <!-- Testimonials -->
-  <section class="relative py-16" style="background-image: url('images/airport-soft-bg.jpg'); background-size: cover; background-position: center;">
-  <div class="bg-white bg-opacity-90 py-12">
-    <div class="max-w-6xl mx-auto px-4">
-      <h2 class="text-2xl font-bold text-center mb-10">What Our Clients Say</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-        <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-          <p class="italic">“Quaerens got me €400 for my cancelled flight from Madrid – super easy!”</p>
-          <p class="font-semibold mt-4">– Laura P.</p>
-        </div>
-        <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-          <p class="italic">“I didn’t even know I had a right to claim. Thank you for making it simple!”</p>
-          <p class="font-semibold mt-4">– Marc V.</p>
-        </div>
-        <div class="bg-gray-100 p-6 rounded shadow" data-aos="zoom-in">
-          <p class="italic">“Very professional team. Highly recommended for any flight issues.”</p>
-          <p class="font-semibold mt-4">– Sofia R.</p>
         </div>
       </div>
     </div>
-  </div></section>
+  </section>  
 
 <!-- Image Grid Section -->
 <section class="bg-gray-50 py-12">
-  <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 px-4 text-center">
-    <div data-aos="zoom-in">
-      <img src="images/traveler1.jpg" class="rounded-xl shadow-md mb-3" alt="Happy Traveler" />
-      <p class="text-sm text-gray-600">Real clients getting real results</p>
+    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 px-4 text-center">
+  
+      <!-- Image 1: Cancelled Contract -->
+      <div data-aos="zoom-in">
+        <img src="images/cancelled-contract.jpg" class="rounded-xl shadow-md mb-3" alt="Cancelled Timeshare Contract" />
+        <p class="text-sm text-gray-600">Official contract termination — no more annual fees</p>
+      </div>
+  
+      <!-- Image 2: Only 169 Euro -->
+      <div data-aos="zoom-in" data-aos-delay="100">
+        <img src="images/only-169-euro.jpg" class="rounded-xl shadow-md mb-3" alt="Affordable Exit Kit" />
+        <p class="text-sm text-gray-600">Buy your Do-It-Yourself Exit Kit today — just €169</p>
+      </div>
+  
+      <!-- Image 3: Relief / Happy Client -->
+      <div data-aos="zoom-in" data-aos-delay="200">
+        <img src="images/relief-happy.jpg" class="rounded-xl shadow-md mb-3" alt="Relieved Client" />
+        <p class="text-sm text-gray-600">Feel the relief of finally being free from your timeshare</p>
+      </div>
+  
     </div>
-    <div data-aos="zoom-in" data-aos-delay="100">
-      <img src="images/traveler2.jpg" class="rounded-xl shadow-md mb-3" alt="Flight Compensation" />
-      <p class="text-sm text-gray-600">Fast claims, no fees</p>
-    </div>
-    <div data-aos="zoom-in" data-aos-delay="200">
-      <img src="images/traveler3.jpg" class="rounded-xl shadow-md mb-3" alt="Airport Lounge" />
-      <p class="text-sm text-gray-600">Relax — we’ll handle the paperwork</p>
-    </div>
-  </div>
-</section>
+  </section>
+  
 
 <div class="text-center">
     <a href="/claim-form.html"
