Your update message here

--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Exitmytimeshares.com | Quaerens</title>
+        <title>Spanish Property Claims | Quaerens</title>
         <meta name="description" content="Check if you are entitled to claim compensation with Quaerens. Fast, easy, and expert help for timeshare termination and refunds.">
         <meta name="keywords" content="timeshare exit, timeshare claim, compensation, Quaerens, consumer rights">
         <meta name="author" content="Quaerens Ltd.">
@@ -153,7 +153,7 @@ nav a:hover {
 }
 .hero-section {
   position: relative;
-  background-image: url('/images/hero-privacy.jpg');
+  background-image: url('/images/hero-contact.jpg');
   background-size: cover;
   background-position: center;
   height: 50vh; /* Was 75vh — now reduced */
@@ -335,88 +335,68 @@ header nav a:hover {
   <section class="hero-section">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h1>PRIVACY POLICY</h1>
-      <p>"Exitmytimeshares.com"</p>
+      <h1>CONTACT US</h1>
+      <p>Please fill out the form and we will contact you as soon as possible</p>
     </div>
   </section>
 
-  <div class="content-box">
-    <p>At <strong>ExitMyTimeshares.com</strong>, powered by Quaerens Ltd (“we”, “our”, or “us”), we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your personal data when you interact with our website or services. We operate strictly as a consulting agent and work with specialist legal professionals who handle any legal elements of your case.</p>
-  
-    <h3>1. Who We Are</h3>
-    <p>Quaerens Ltd is a UK-based consumer consultancy operating ExitMyTimeshares.com. We specialise in the coordination and management of consumer claims, particularly timeshare exits and contract cancellations. We are not a law firm. We work with regulated legal professionals when legal representation is required.</p>
-  
-    <h3>2. Information We Collect</h3>
+  <div class="info-box">
+    <p><strong>Get in touch with us today for expert advice and personalized assistance. We’re here to help with any questions or concerns you may have.</strong></p>
+    <ul></ul>
+    <p><strong>Exityourtimeshares.com powered by Quaerens Ltd</strong></p>
     <ul>
-      <li>Full name, contact details (email, phone number)</li>
-      <li>Country of residence and preferred language</li>
-      <li>Claim-specific information (e.g. resort name, contract type, uploaded documents)</li>
-      <li>IP address, browser type, and site usage via cookies</li>
-    </ul>
+    <p>71–75 Shelton Street</p>
+    <p>Covent Garden</p>
+    <p>WC2H 9JQ</p>
+    <p>London</p>
+    <p>United Kingdom</p>
+ <ul>
+    <p>Reg. nr.: 16176152</p> 
+</div>
+
+  <section class="max-w-3xl mx-auto px-4 py-12">
+    <h2 class="text-3xl font-bold text-center mb-6 text-blue-700">📝 Submit The Form</h2>
+    <p class="text-center text-gray-600 mb-8">Please provide the details below to initiate your claim process. Our team will review and get back to you promptly.</p>
   
-    <h3>3. How We Use Your Data</h3>
-    <ul>
-      <li>Assess your case and eligibility</li>
-      <li>Provide guidance or connect you with legal support</li>
-      <li>Communicate with you about your enquiry</li>
-      <li>Maintain records and meet regulatory duties</li>
-      <li>Improve our service and user experience</li>
-    </ul>
-    <p>We do not sell or share your data for marketing purposes.</p>
+    <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="bg-white shadow-md rounded-lg p-6 space-y-6">
+      <div>
+        <label class="block text-gray-700 font-semibold mb-2" for="full-name">Full Name</label>
+        <input type="text" id="full-name" name="full-name" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
+      </div>
   
-    <h3>4. Sharing Your Information</h3>
-    <p>We only share your information with:</p>
-    <ul>
-      <li>Legal professionals we partner with (if relevant to your case)</li>
-      <li>Service providers that support our systems (e.g. hosting or database providers)</li>
-      <li>Regulators or public authorities when required by law</li>
-    </ul>
-    <p>All partners are contractually required to keep your information secure and confidential.</p>
+      <div>
+        <label class="block text-gray-700 font-semibold mb-2" for="email">Email Address</label>
+        <input type="email" id="email" name="email" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
+      </div>
   
-    <h3>5. Your Rights</h3>
-    <ul>
-      <li>Access your data</li>
-      <li>Request corrections</li>
-      <li>Ask for deletion (subject to legal limits)</li>
-      <li>Object to certain processing</li>
-      <li>Withdraw consent at any time</li>
-    </ul>
-    <p>To exercise these rights, contact us at <a href="mailto:info@quaerens.co.uk">info@quaerens.co.uk</a></p>
+      <div>
+        <label class="block text-gray-700 font-semibold mb-2" for="phone">Phone Number</label>
+        <input type="tel" id="phone" name="phone" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
+      </div>
   
-    <h3>6. Data Security</h3>
-    <p>We use technical and organisational safeguards to protect your information:</p>
-    <ul>
-      <li>Encrypted cloud storage</li>
-      <li>Access controls</li>
-      <li>Regular data backups</li>
-    </ul>
+      <div>
+        <label class="block text-gray-700 font-semibold mb-2" for="claim-type">Type of Claim</label>
+        <select id="claim-type" name="claim-type" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <option value="">Select please</option>
+          <option value="contact-us">Contact Us</option>
+        </select>
+      </div>
   
-    <h3>7. Data Retention</h3>
-    <p>Your data is retained only as long as needed for the purpose collected or legal compliance.</p>
+      <div>
+        <label class="block text-gray-700 font-semibold mb-2" for="message">Additional Details</label>
+        <textarea id="message" name="message" rows="5" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
+      </div>
   
-    <h3>8. International Transfers</h3>
-    <p>If you are outside the UK, your data may be processed within the UK/EEA. We ensure secure transfer safeguards are in place.</p>
+      <div class="text-center">
+        <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-md font-semibold hover:bg-blue-700 transition">Submit Claim</button>
+      </div>
+    </form>
+  </section>
   
-    <h3>9. Cookies and Analytics</h3>
-    <p>We use cookies to:</p>
-    <ul>
-      <li>Analyse site usage and improve performance</li>
-      <li>Remember session and user preferences</li>
-    </ul>
-    <p>You may adjust cookie settings via your browser.</p>
-  
-    <h3>10. Contact Us</h3>
-    <p>
-      ExitMyTimeshares.com (operated by Quaerens Ltd)<br/>
-      Email: <a href="mailto:info@quaerens.co.uk">info@quaerens.co.uk</a><br/>
-      Registered in England and Wales<br/>
-      Company No. 16176152
-    </p>
-  </div>
-  </main>  
+    
     
 <footer style="text-align: center; font-size: 0.85rem; color: #6b7280; padding: 2rem 1rem; max-width: 800px; margin: 0 auto;">
-  © 2025 Exitmytimeshares.com powered by Quaerens Ltd. All rights reserved. All rights reserved.<br />
+  © 2025 Exitmytimeshares.com powered by Quaerens Ltd. All rights reserved.<br />
   <a href="privacy.html" style="color: #2563eb; text-decoration: none; margin: 0 0.5rem;">Privacy Policy</a> |
   <a href="terms.html" style="color: #2563eb; text-decoration: none; margin: 0 0.5rem;">Terms of Use</a> |
   <a href="gdpr.html" style="color: #2563eb; text-decoration: none; margin: 0 0.5rem;">GDPR</a> |
@@ -447,3 +427,4 @@ header nav a:hover {
   </script>
   </body>
   </html>
+
