--- a/public/gdpr.html
+++ b/public/gdpr.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Exitmytimeshares.com | Quaerens</title>
+        <title>Spanish Property Claims | Quaerens</title>
         <meta name="description" content="Check if you are entitled to claim compensation with Quaerens. Fast, easy, and expert help for timeshare termination and refunds.">
         <meta name="keywords" content="timeshare exit, timeshare claim, compensation, Quaerens, consumer rights">
         <meta name="author" content="Quaerens Ltd.">
@@ -153,7 +153,7 @@ nav a:hover {
 }
 .hero-section {
   position: relative;
-  background-image: url('/images/hero-privacy.jpg');
+  background-image: url('/images/hero-gdpr.jpg');
   background-size: cover;
   background-position: center;
   height: 50vh; /* Was 75vh — now reduced */
@@ -335,88 +335,53 @@ header nav a:hover {
   <section class="hero-section">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h1>PRIVACY POLICY</h1>
-      <p>"Exitmytimeshares.com"</p>
+      <h1>GDPR</h1>
+      <p>"Exitmytimeshares.com powered by Quaerens Ltd"</p>
     </div>
   </section>
 
   <div class="content-box">
-    <p>At <strong>ExitMyTimeshares.com</strong>, powered by Quaerens Ltd (“we”, “our”, or “us”), we are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your personal data when you interact with our website or services. We operate strictly as a consulting agent and work with specialist legal professionals who handle any legal elements of your case.</p>
+    <p><strong>ExitMyTimeshares.com powered by Quaerens Ltd</strong> is fully committed to protecting your personal data and complying with the General Data Protection Regulation (GDPR). We act solely as a consulting agent, coordinating claims and referring clients to external legal professionals. We are not a law firm and do not provide legal advice ourselves.</p>
   
-    <h3>1. Who We Are</h3>
-    <p>Quaerens Ltd is a UK-based consumer consultancy operating ExitMyTimeshares.com. We specialise in the coordination and management of consumer claims, particularly timeshare exits and contract cancellations. We are not a law firm. We work with regulated legal professionals when legal representation is required.</p>
-  
-    <h3>2. Information We Collect</h3>
+    <h3>1. Your Data Protection Rights</h3>
     <ul>
-      <li>Full name, contact details (email, phone number)</li>
-      <li>Country of residence and preferred language</li>
-      <li>Claim-specific information (e.g. resort name, contract type, uploaded documents)</li>
-      <li>IP address, browser type, and site usage via cookies</li>
+      <li>The right to access your personal data</li>
+      <li>The right to request correction of inaccurate data</li>
+      <li>The right to request deletion of data no longer needed</li>
+      <li>The right to restrict processing in certain situations</li>
+      <li>The right to object to processing for direct marketing</li>
+      <li>The right to data portability</li>
     </ul>
   
-    <h3>3. How We Use Your Data</h3>
-    <ul>
-      <li>Assess your case and eligibility</li>
-      <li>Provide guidance or connect you with legal support</li>
-      <li>Communicate with you about your enquiry</li>
-      <li>Maintain records and meet regulatory duties</li>
-      <li>Improve our service and user experience</li>
-    </ul>
-    <p>We do not sell or share your data for marketing purposes.</p>
+    <h3>2. Lawful Basis for Processing</h3>
+    <p>We process your data on the basis of legitimate interest, consent, and performance of a contract where applicable. By submitting a claim or enquiry, you consent to the use of your data to assess and forward your case to external legal professionals.</p>
   
-    <h3>4. Sharing Your Information</h3>
-    <p>We only share your information with:</p>
-    <ul>
-      <li>Legal professionals we partner with (if relevant to your case)</li>
-      <li>Service providers that support our systems (e.g. hosting or database providers)</li>
-      <li>Regulators or public authorities when required by law</li>
-    </ul>
-    <p>All partners are contractually required to keep your information secure and confidential.</p>
+    <h3>3. Data Transfers and Storage</h3>
+    <p>Your data is stored securely in cloud-based systems with restricted access. Where data is transferred outside the UK/EEA, we ensure appropriate safeguards are in place, such as standard contractual clauses.</p>
   
-    <h3>5. Your Rights</h3>
-    <ul>
-      <li>Access your data</li>
-      <li>Request corrections</li>
-      <li>Ask for deletion (subject to legal limits)</li>
-      <li>Object to certain processing</li>
-      <li>Withdraw consent at any time</li>
-    </ul>
-    <p>To exercise these rights, contact us at <a href="mailto:info@quaerens.co.uk">info@quaerens.co.uk</a></p>
+    <h3>4. Security Measures</h3>
+    <p>We use encrypted storage (Firebase), secure HTTPS protocols, and internal access controls to safeguard your personal data. Our team is trained to manage personal information in full compliance with GDPR requirements.</p>
   
-    <h3>6. Data Security</h3>
-    <p>We use technical and organisational safeguards to protect your information:</p>
-    <ul>
-      <li>Encrypted cloud storage</li>
-      <li>Access controls</li>
-      <li>Regular data backups</li>
-    </ul>
+    <h3>5. Retention Policy</h3>
+    <p>We retain personal data only as long as necessary to process your case or meet legal and regulatory requirements. If you request deletion and no legal basis exists to retain your data, we will securely delete it.</p>
   
-    <h3>7. Data Retention</h3>
-    <p>Your data is retained only as long as needed for the purpose collected or legal compliance.</p>
+    <h3>6. Cookies & Tracking</h3>
+    <p>We use cookies and similar technologies to improve website functionality and analyze visitor behaviour. You can adjust your cookie preferences at any time via your browser settings.</p>
   
-    <h3>8. International Transfers</h3>
-    <p>If you are outside the UK, your data may be processed within the UK/EEA. We ensure secure transfer safeguards are in place.</p>
-  
-    <h3>9. Cookies and Analytics</h3>
-    <p>We use cookies to:</p>
-    <ul>
-      <li>Analyse site usage and improve performance</li>
-      <li>Remember session and user preferences</li>
-    </ul>
-    <p>You may adjust cookie settings via your browser.</p>
-  
-    <h3>10. Contact Us</h3>
+    <h3>7. Contact Us</h3>
+    <p>If you have any questions or wish to exercise your GDPR rights, please contact us:</p>
     <p>
-      ExitMyTimeshares.com (operated by Quaerens Ltd)<br/>
-      Email: <a href="mailto:info@quaerens.co.uk">info@quaerens.co.uk</a><br/>
-      Registered in England and Wales<br/>
-      Company No. 16176152
+      ExitMyTimeshares.com<br>
+      Powered by Quaerens Ltd<br>
+      Email: <a href="mailto:info@quaerens.co.uk">info@quaerens.co.uk</a><br>
+      Registered in England and Wales – Company No. 16176152
     </p>
   </div>
   </main>  
+
     
 <footer style="text-align: center; font-size: 0.85rem; color: #6b7280; padding: 2rem 1rem; max-width: 800px; margin: 0 auto;">
-  © 2025 Exitmytimeshares.com powered by Quaerens Ltd. All rights reserved. All rights reserved.<br />
+  © 2025 Exitmytimeshares.com powered by Quaerens Ltd. All rights reserved.<br />
   <a href="privacy.html" style="color: #2563eb; text-decoration: none; margin: 0 0.5rem;">Privacy Policy</a> |
   <a href="terms.html" style="color: #2563eb; text-decoration: none; margin: 0 0.5rem;">Terms of Use</a> |
   <a href="gdpr.html" style="color: #2563eb; text-decoration: none; margin: 0 0.5rem;">GDPR</a> |
@@ -447,3 +412,4 @@ header nav a:hover {
   </script>
   </body>
   </html>
+
