Your update message here

--- a/public/gdpr.html
+++ b/public/gdpr.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Spanish Property Claims | Quaerens</title>
+        <title>Exitmytimeshares.com | Quaerens</title>
         <meta name="description" content="Check if you are entitled to claim compensation with Quaerens. Fast, easy, and expert help for timeshare termination and refunds.">
         <meta name="keywords" content="timeshare exit, timeshare claim, compensation, Quaerens, consumer rights">
         <meta name="author" content="Quaerens Ltd.">
@@ -13,7 +13,7 @@
         <meta name="robots" content="index, follow">
       
         <!-- Open Graph -->
-        <meta property="og:title" content="Spanish Property Claims | Quaerens">
+        <meta property="og:title" content="Exitmytimeshares.com | Quaerens">
         <meta property="og:description" content="Mis-sold timeshare or can't exit? Get help now with Quaerens. EU legal support.">
         <meta property="og:image" content="https://quaerens.co.uk/images/quaerens-logo.png">
         <meta property="og:url" content="https://quaerens.co.uk/timeshare.html">
