--- a/public/privacy.html
+++ b/public/privacy.html
@@ -13,7 +13,7 @@
         <meta name="robots" content="index, follow">
       
         <!-- Open Graph -->
-        <meta property="og:title" content="Spanish Property Claims | Quaerens">
+        <meta property="og:title" content="Exitmytimeshares.com | Quaerens">
         <meta property="og:description" content="Mis-sold timeshare or can't exit? Get help now with Quaerens. EU legal support.">
         <meta property="og:image" content="https://quaerens.co.uk/images/quaerens-logo.png">
         <meta property="og:url" content="https://quaerens.co.uk/timeshare.html">
